[package]
name = "filemng"
version = "0.1.0"
authors = ["TRGT"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = "0.15.0" 
serde = { version = "1", features = ["derive"], optional = true }

[features]
default = []
persistence = ["eframe/persistence", "serde"]

[profile.release]
opt-level = 2



